-- =====================================================
-- LIBRO DIGITAL — authService
-- Base de datos: librodigital_auth
-- Puerto del servicio: 8091
-- =====================================================
-- Conectarse a librodigital_auth antes de ejecutar.
-- =====================================================

-- Tabla de roles
CREATE TABLE IF NOT EXISTS role (
    id   BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name VARCHAR(255)
);

-- Tabla de usuarios
CREATE TABLE IF NOT EXISTS users (
    id         BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    username   VARCHAR(255) NOT NULL UNIQUE,
    password   VARCHAR(255) NOT NULL,
    email      VARCHAR(255) NOT NULL UNIQUE,
    enabled    BOOLEAN NOT NULL DEFAULT TRUE,
    created_at TIMESTAMP,
    updated_at TIMESTAMP
);

-- Relación usuario ↔ rol
CREATE TABLE IF NOT EXISTS user_roles (
    user_id BIGINT NOT NULL,
    role_id BIGINT NOT NULL,
    PRIMARY KEY (user_id, role_id),
    CONSTRAINT fk_user_roles_user FOREIGN KEY (user_id) REFERENCES users(id),
    CONSTRAINT fk_user_roles_role FOREIGN KEY (role_id) REFERENCES role(id)
);

-- =====================================================
-- Datos iniciales (roles del sistema)
-- =====================================================

INSERT INTO role (name)
SELECT r FROM (VALUES
    ('ADMINISTRADOR'),
    ('DOCENTE'),
    ('APODERADO'),
    ('ESTUDIANTE')
) AS v(r)
WHERE NOT EXISTS (SELECT 1 FROM role WHERE name = v.r);

-- Usuario admin: créalo vía API después de levantar authService + apiGetaway:
-- POST http://localhost:8090/auth/register
-- Body: { "username": "admin", "email": "admin@librodigital.cl", "password": "admin123!" }
--
-- Los roles se insertan automáticamente al iniciar authService (RoleInitializerConfig).
